// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`raptor.render() Maps model keys to view prop keys according to $props. 1`] = `
<div
  className="user-list"
>
  <div
    className="user-item"
  >
    <div
      className="avatar"
    >
      F
    </div>
    <div
      className="primary"
    >
      Foo Guy
    </div>
    <div
      className="secondary"
    >
      (619) 555-7380
    </div>
  </div>
  <div
    className="user-item"
  >
    <div
      className="avatar"
    >
      B
    </div>
    <div
      className="primary"
    >
      Bar Guy
    </div>
    <div
      className="secondary"
    >
      (858) 555-7380
    </div>
  </div>
</div>
`;

exports[`raptor.render() Renders correct JSX from a simple layout and view model. 1`] = `
<div
  className="user-list"
>
  <div
    className="user-item"
  >
    <div
      className="avatar"
    >
      F
    </div>
    <div
      className="primary"
    >
      Foo Guy
    </div>
    <div
      className="secondary"
    >
      (619) 555-7380
    </div>
  </div>
  <div
    className="user-item"
  >
    <div
      className="avatar"
    >
      B
    </div>
    <div
      className="primary"
    >
      Bar Guy
    </div>
    <div
      className="secondary"
    >
      (858) 555-7380
    </div>
  </div>
  <div
    className="user-item"
  >
    <div
      className="avatar"
    >
      H
    </div>
    <div
      className="primary"
    >
      Herp Guy
    </div>
    <div
      className="secondary"
    >
      (415) 555-7380
    </div>
  </div>
  <div
    className="user-item"
  >
    <div
      className="avatar"
    >
      D
    </div>
    <div
      className="primary"
    >
      Derp Guy
    </div>
    <div
      className="secondary"
    >
      (650) 555-7380
    </div>
  </div>
</div>
`;

exports[`raptor.render() Renders deeply nested views OK. 1`] = `
<div
  className="hello-world"
  foo="Hero Carousel"
>
  <div
    className="hello-world"
  >
    <div
      className="hello-world"
      foo="Carousel Item 1"
    >
      <div
        className="hello-world"
        foo="Message 1"
      />
    </div>
    <div
      className="hello-world"
      foo="Carousel Item 2"
    >
      <div
        className="hello-world"
        foo="Message 2"
      />
    </div>
  </div>
</div>
`;

exports[`raptor.render() Supports reducer functions for $props. 1`] = `
<div
  className="user-list"
>
  <div
    className="user-item"
  >
    <div
      className="avatar"
    >
      F
    </div>
    <div
      className="primary"
    >
      Foo Guy
    </div>
    <div
      className="secondary"
    >
      (619) 555-7380
    </div>
  </div>
  <div
    className="user-item"
  >
    <div
      className="avatar"
    >
      B
    </div>
    <div
      className="primary"
    >
      Bar Guy
    </div>
    <div
      className="secondary"
    >
      (858) 555-7380
    </div>
  </div>
</div>
`;
